examples/bad/05_2_if_wrong_condition.soy
# only bool is allowed in if condition
if (3 + 3) {
    print("here");
}